SJRK-342: updated AIHEC logo, added contrast themes. Some scaling issues

--- a/themes/aihec/css/aihec.css
+++ b/themes/aihec/css/aihec.css
@@ -67,17 +67,15 @@ h3:empty {
     line-height: 0.9;
 }
 
-.sjrk-st-page-header-logo-container {
-    align-self: center;
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 2rem;
-}
-
 .sjrk-st-page-header-logo {
+    display: inline-block;
     height: 6rem;
+    width: 16.5rem;
     max-height: 6rem;
-    width: auto;
+    margin-right: 2rem;
+    align-self: center;
+    vertical-align: middle;
+    background: url(../../img/AIHEClogo.svg) no-repeat;
 }
 
 .sjrk-st-page-header-main-title {
@@ -216,6 +214,9 @@ h3:empty {
 
 .sjrk-st-aihec-welcome-image {
     align-self: center;
+    background: url(../../img/AIHEClogo.svg) no-repeat;
+    height: 12.5rem;
+    width: 100%;
 }
 
 .sjrk-st-story-editor-content, .sjrk-st-story-content {
@@ -581,13 +582,10 @@ h3:empty {
         align-items: center;
     }
 
-    .sjrk-st-page-header-logo-container {
-        margin-right: 0;
-    }
-
     .sjrk-st-page-header-logo {
         height: auto;
         max-width: 95%;
+        margin-right: 0;
     }
 
     .sjrk-st-aihec-welcome-message {
@@ -679,3 +677,12 @@ h3:empty {
 .fl-theme-gw .sjrk-st-page-footer-hewlett-logo { background-image: url("../../img/logo_hewlett_grey_dark.svg"); }
 .fl-theme-gd .sjrk-st-page-footer-hewlett-logo { background-image: url("../../img/logo_hewlett_grey.svg"); }
 .fl-theme-bbr .sjrk-st-page-footer-hewlett-logo { background-image: url("../../img/logo_hewlett_black.svg"); }
+
+.fl-theme-bw .sjrk-st-page-header-logo, .fl-theme-bw .sjrk-st-aihec-welcome-image { background-image: url("../../img/AIHEClogo_black.svg"); }
+.fl-theme-wb .sjrk-st-page-header-logo, .fl-theme-wb .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_white.svg"); }
+.fl-theme-by .sjrk-st-page-header-logo, .fl-theme-by .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_black.svg"); }
+.fl-theme-yb .sjrk-st-page-header-logo, .fl-theme-yb .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_yellow.svg"); }
+.fl-theme-lgdg .sjrk-st-page-header-logo, .fl-theme-lgdg .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_grey_light.svg"); }
+.fl-theme-gw .sjrk-st-page-header-logo, .fl-theme-gw .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_grey_dark.svg"); }
+.fl-theme-gd .sjrk-st-page-header-logo, .fl-theme-gd .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_grey.svg"); }
+.fl-theme-bbr .sjrk-st-page-header-logo, .fl-theme-bbr .sjrk-st-aihec-welcome-image  { background-image: url("../../img/AIHEClogo_black.svg"); }
